--- a/assets/index.css
+++ b/assets/index.css
@@ -265,3 +265,93 @@ body{
     background-color: #CCCCCC;
     filter: grayscale(1);
 }
+.form{
+    display: flex;
+    flex-direction: row;
+    margin-left: 15vw;
+    margin-top: 13vh;
+    max-width: 70vw;
+    justify-content: space-evenly;
+}
+.form-left-side{
+    display: flex;
+    flex-direction: column;
+}
+.form-left-side h1{
+    font-size: 45px;
+    color: #433BFF;
+    font-weight: 700;
+}
+.form-left-side p{
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 1.3;
+}
+.form-left-side span{
+    color: #433BFF;
+}
+.form-right-side{
+    display: flex;
+    flex-direction: column;
+}
+.name-input, .surname-input{
+    background-color: #E5E4E4;
+    border: none;
+    height: 32px;
+    width: 300px;
+    font-weight: 500;
+    margin-right: 20px;
+    padding-left: 5px;
+}
+.email-input{
+    background-color: #E5E4E4;
+    border: none;
+    height: 32px;
+    margin-top: 10px;
+    width: 630px;
+    font-weight: 500;
+    padding-left: 5px;
+}
+.message-input{
+    background-color: #E5E4E4;
+    border: none;
+    font-family: Inter;
+    font-size: 13px;
+    font-weight: 500;
+    width: 630px;
+    margin-top: 10px;
+    height: 200px;
+    padding-left: 5px;
+}
+.submit-button{
+    background-color: #433BFF;
+    color: white;
+    font-size: 15px;
+    font-weight: 500;
+    text-align: center;
+    height: 36.36px;
+    width: 120px;
+    border: none;
+    border-radius: 6px;
+    margin-top: 10px;
+    transition: all ease-out 0.15s;
+}
+.submit-button:hover{
+    transform: scale(1.1);
+    box-shadow: 2px 4px 8px rgba(67, 59, 255, 0.5);
+}
+.pages-links{
+    display: flex;
+    flex-direction: row;
+    max-width: 50vw;
+    margin-left: 25vw;
+    justify-content: space-evenly;
+}
+.box1, .box2{
+    display: flex;
+    flex-direction: column;
+    border: 1px solid black;
+    border-radius: 12px;
+    height: 380px;
+    width: 150px;
+}
