--- a/assets/index.css
+++ b/assets/index.css
@@ -1,6 +1,7 @@
 body{
     background-color: #F2F2F2;
     font-family: Inter;
+    
 }
 .header{
     display: flex;
@@ -343,15 +344,43 @@ body{
 .pages-links{
     display: flex;
     flex-direction: row;
-    max-width: 50vw;
-    margin-left: 25vw;
     justify-content: space-evenly;
+    margin-top: 10vh;
 }
 .box1, .box2{
     display: flex;
     flex-direction: column;
     border: 1px solid black;
     border-radius: 12px;
-    height: 380px;
-    width: 150px;
+    height: 140px;
+    width: 300px;
+    align-items: center;
+    justify-content: center;
+}
+.box1 button, .box2 button{
+    height: 49px;
+    width: 260px;
+    background-color: #433BFF;
+    border: none;
+    border-radius: 12px;
+    color: white;
+    align-items: center;
+    text-align: center;
+    font-size: 19px;
+    font-weight: 500;
+    margin-top: 10px;
+    transition: all ease-out 0.15s;
+}
+.box1 button:hover, .box2 button:hover{
+    transform: scale(1.1);
+    box-shadow: 3px 5px 5px rgba(67, 59, 255, 0.5);
+}
+.btnimg{
+    height: 22px;
+    width: 22px;
+    margin-bottom: -5px;
+}
+.boximg{
+    height: 60px;
+    width: 60px;
 }
