--- a/assets/index.css
+++ b/assets/index.css
@@ -274,10 +274,26 @@ body{
     background-color: #FFFFFF;
     opacity: 0;
     transform: scale(0.01);
+    width: 90%;
+    margin-left: 5%;
+    margin-top: -3px;
+}
+.prj2hidden h1{
+    font-size: 20px;
+    font-weight: 500;
+    margin-bottom: 0;
+}
+.prj2hidden p{
+    font-size: 16px;
+    font-weight: 500;
+    text-align: center;
 }
 .links{
     display: flex;
     flex-direction: row;
+    width: inherit;
+    justify-content: space-evenly;
+    margin-bottom: 5px;
 }
 .prj2:hover .prj2hidden{
     opacity: 1;
