--- a/assets/index.css
+++ b/assets/index.css
@@ -1,8 +1,23 @@
+html{
+    scroll-behavior: smooth;
+}
+:root{
+    --primary-color:#f2f2f2;
+    --secondary-color: #000000;
+    --third-color:#433BFF;
+    --fourth-color:#9791FF;
+    --fifh-color:#D9D9D9;
+    --sixth-color:#E5E4E4;
+    --seventh-color:#505050;
+}
 body{
-    background-color: #F2F2F2;
+    background-color: var(--primary-color);
     font-family: Inter;
     overflow-x: hidden;
     
+}
+p, h1, h2{
+    color: var(--secondary-color);
 }
 @keyframes landings-right{
     0%{
@@ -62,13 +77,18 @@ body{
     font-weight:500;
     width: 50vw;
     left: 25%;
+    color: var(--secondary-color);
+    text-decoration: none;
 }
-.header-text p{
+
+.header-text a{
     transition: all linear 0.08s;
     cursor: pointer;
+        text-decoration: none;
+        color: var(--secondary-color);
 }
-.header-text p:hover{
-    color: #433BFF;
+.header-text a:hover{
+    color: var(--third-color);
     transform: scale(1.15);
     font-weight: 700;
 }
@@ -78,11 +98,12 @@ body{
     margin-left: 10px;
     width: 45px;
     justify-content: center;
-    background-color:#D9D9D9;
+    background-color:var(--fifh-color);
     height: 40px;
     align-items: center;
     border-radius: 100px;
     transition: all ease-in 0.2s;
+    border-style: none;
 }
 .lightmode img{
     height: 25px;
@@ -109,7 +130,7 @@ body{
     margin-bottom: 0;
 }
 .hitext span{
-    color: #433BFF;
+    color: var(--third-color);
 }
 .left-side{
     display: flex;
@@ -137,12 +158,12 @@ body{
 }
 .left-2 button{
     font-size: 21.59px;
-    color: white;
+    color: var(--primary-color);
     height: 53.98px;
     width: 200px;
 }
 .contact-me-button{
-    background-color: #433BFF;
+    background-color: var(--third-color);
     border: none;
     border-radius: 12px;
     transition: all .15s ease-out;
@@ -152,7 +173,7 @@ body{
     box-shadow: 2px 5px 15px rgba(67, 59, 255, 1);
 }
 .download-cv-button{
-    background-color: #9791FF;
+    background-color: var(--fourth-color);
     border:none;
     border-radius: 12px;
     align-items: center;
@@ -179,7 +200,8 @@ body{
     font-weight: 500;
     font-size: 21.59px;
     margin-top: 0;
-    color: #7F7F7F;
+    color: var(--secondary-color);
+    opacity: .5;
 }
 .right-side{
     margin-left: 7vw;
@@ -259,7 +281,7 @@ body{
     line-height: 1.6;
 }
 .about-me span{
-    color: #433BFF;
+    color: var(--third-color);
 }
 .about-left-side{
     display: flex;
@@ -278,7 +300,7 @@ body{
     margin-left: 15vw;
 }
 .projects h1{
-    color: #433BFF;
+    color: var(--third-color);
     font-weight: bold;
     font-size: 45px;
 }
@@ -298,7 +320,7 @@ body{
 .prj1, .prj2, .prj3{
     width: 407px;
     height: 218.6px;
-    border: 1px solid black;
+    border: 1px solid var(--secondary-color);
     filter: grayscale(100%);
     transition: all ease-out 0.15s;
 }
@@ -306,7 +328,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #FFFFFF;
+    background-color: var(--sixth-color);
     opacity: 0;
     transform: scale(0.01);
     width: 90%;
@@ -317,11 +339,13 @@ body{
     font-size: 20px;
     font-weight: 500;
     margin-bottom: 0;
+    color: var(--secondary-color);
 }
 .prj2hidden p{
     font-size: 16px;
     font-weight: 500;
     text-align: center;
+    color: var(--secondary-color);
 }
 .links{
     display: flex;
@@ -360,7 +384,7 @@ body{
 }
 .form-left-side h1{
     font-size: 45px;
-    color: #433BFF;
+    color: var(--third-color);
     font-weight: 700;
 }
 .form-left-side p{
@@ -369,14 +393,14 @@ body{
     line-height: 1.3;
 }
 .form-left-side span{
-    color: #433BFF;
+    color: var(--third-color);
 }
 .form-right-side{
     display: flex;
     flex-direction: column;
 }
 .name-input, .surname-input{
-    background-color: #E5E4E4;
+    background-color: var(--sixth-color);
     border: none;
     height: 32px;
     width: 300px;
@@ -385,7 +409,7 @@ body{
     padding-left: 5px;
 }
 .email-input{
-    background-color: #E5E4E4;
+    background-color: var(--sixth-color);
     border: none;
     height: 32px;
     margin-top: 10px;
@@ -394,7 +418,7 @@ body{
     padding-left: 5px;
 }
 .message-input{
-    background-color: #E5E4E4;
+    background-color: var(--sixth-color);
     border: none;
     font-family: Inter;
     font-size: 13px;
@@ -405,7 +429,7 @@ body{
     padding-left: 5px;
 }
 .submit-button{
-    background-color: #433BFF;
+    background-color: var(--fourth-color);
     color: white;
     font-size: 15px;
     font-weight: 500;
@@ -430,7 +454,7 @@ body{
 .box1, .box2{
     display: flex;
     flex-direction: column;
-    border: 1px solid black;
+    border: 1px solid var(--secondary-color);
     border-radius: 12px;
     height: 140px;
     width: 300px;
@@ -440,10 +464,10 @@ body{
 .box1 button, .box2 button{
     height: 49px;
     width: 260px;
-    background-color: #433BFF;
+    background-color: var(--third-color);
     border: none;
     border-radius: 12px;
-    color: white;
+    color: var(--primary-color);
     align-items: center;
     text-align: center;
     font-size: 19px;
