finally done with the mobile version, except for the animations and download cv

--- a/assets/index.css
+++ b/assets/index.css
@@ -507,6 +507,9 @@ hr{
 }
 
 @media (min-width: 900px) and (max-width:1600px) {
+    html{
+        overflow-y: hidden;
+    }
     .projects-grid, .projects{
         transform: scale(0.89);
         margin-left: 6.5%;
@@ -552,6 +555,17 @@ hr{
         flex-direction: row;
         justify-content: space-evenly;
         width: 70%;
+        left: 17%;
+    }
+    .left-side{
+        width: 100%;
+    }
+    .hitext{
+        text-align: center;
+        width: 100%;
+    }
+    .left-upper{
+        width: 100%;
     }
     .header-text a{
         font-size: 14px;
@@ -559,11 +573,20 @@ hr{
     .hitext p{
         font-size: 30px;
     }
+    .left-1, .left-3{
+        text-align: center;
+    }
+    .left-2{
+        width: 100%;
+        justify-content: space-evenly;
+    }
     .landing-page{
         flex-direction: column;
         margin-left: 0;
         display: flex;
         margin-top: 100px;
+        width: 100%;
+        max-width: 100%;
     }
     .right-side img, .circle1{
         transform: scale(0.6);
@@ -616,6 +639,7 @@ hr{
         margin-left: 0;
         margin-top: 120%;
         flex-direction: column;
+        text-align: center;
     }
     .about-me h1{
         font-size: 26px;
@@ -632,6 +656,7 @@ hr{
     .projects{
         margin-top: 5%;
         margin-left: 0;
+        text-align: center;
     }
     .projects h1{
         font-size: 26px;
@@ -663,6 +688,9 @@ hr{
     .form{
         flex-direction: column;
         margin-left: 0;
+        text-align: center;
+        max-width: 100%;
+        justify-content: center;
     }
     .form-left-side h1{
         font-size: 26px;
@@ -701,6 +729,25 @@ hr{
     .prj2hidden.active{
         opacity: 1;
         transform: scale(1);
+    }
+    .prj2 p{
+        font-size: 13px;
+    }
+    .prj2 h1{
+        font-size: 16px;
+    }
+    .name-input{
+        margin-right: 0;
+        margin-left: 0;
+    }
+    .surname-input{
+        margin-left: 0;
+        margin-right: 0;
+    }
+    .namesur{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
     
 }
