--- a/assets/index.css
+++ b/assets/index.css
@@ -641,14 +641,15 @@ hr{
         flex-direction: column;
         text-align: center;
     }
-    .about-me h1{
+    .about-me h1, .projects h1{
         font-size: 26px;
     }
     .about-me h2{
         font-size: 16.5px;
     }
-    .about-me p{
+    .about-me p, .projects p{
         font-size: 14px;
+        text-wrap: wrap;
     }
     .about-right-side img{
         display: none;
@@ -658,13 +659,7 @@ hr{
         margin-left: 0;
         text-align: center;
     }
-    .projects h1{
-        font-size: 26px;
-    }
-    .projects p{
-        font-size: 14px;
-        text-wrap: wrap;
-    }
+
     .projects-grid{
         margin-left: 0;
         max-width: 100%;
@@ -672,6 +667,7 @@ hr{
         display: flex;
         flex-direction: column;
         margin-top: 0;
+        align-items: center;
     }
     .prj1, .prj2, .prj3{
         transform: scale(0.7);
@@ -749,5 +745,43 @@ hr{
         flex-direction: column;
         align-items: center;
     }
-    
+}
+@media (max-width:409px){
+    .black-bar{
+        width: 100%;
+        margin-left: -2%;
+    }
+    .right-side img, .circle1{
+        transform: scale(0.55);
+        margin-left: -25%;
+    }
+    .right-side img{
+        margin-left: -30%
+    }
+    .about-me{
+        margin-top: 130%;
+    }
+    .about-me h1, .projects h1{
+        font-size: 22px;
+    }
+    .about-me h2{
+        font-size: 12.5px
+    }
+    .about-me p, .projects p{
+        font-size: 11.5px;
+        text-wrap: wrap;
+    }
+    .prj1, .prj2, .prj3{
+        transform: scale(0.6);
+    }
+    .prj2hidden{
+        transform: scale(0.6);
+    }
+    .prj2.active{
+        transform: scale(0.8);
+    }
+    .projects-grid{
+        width: 100%;
+        align-items: center;
+    }
 }
