--- a/assets/index.css
+++ b/assets/index.css
@@ -718,11 +718,11 @@ hr{
     .prj2:hover .prj2hidden{
         transform: scale(0.9);
     }
-    .prj2.active{
+    .prj2.hover{
         transform: scale(0.9);
         filter: grayscale(0);
     }
-    .prj2hidden.active{
+    .prj2hidden:hover{
         opacity: 1;
         transform: scale(1);
     }
@@ -777,9 +777,9 @@ hr{
     .prj2hidden{
         transform: scale(0.6);
     }
-    .prj2.active{
+    /*.prj2.active{
         transform: scale(0.8);
-    }
+    }*/
     .projects-grid{
         width: 100%;
         align-items: center;
