--- a/assets/index.css
+++ b/assets/index.css
@@ -670,7 +670,7 @@ hr{
         align-items: center;
     }
     .prj1, .prj2, .prj3{
-        transform: scale(0.7);
+        transform: scale(0.7) !important;
     }
     .prj2hidden{
         transform: scale(0.7);
@@ -772,7 +772,7 @@ hr{
         text-wrap: wrap;
     }
     .prj1, .prj2, .prj3{
-        transform: scale(0.6);
+        transform: scale(0.6) !important;
     }
     .prj2hidden{
         transform: scale(0.6);
