--- a/assets/index.css
+++ b/assets/index.css
@@ -654,6 +654,7 @@ hr{
     .projects-grid{
         margin-left: 0;
         max-width: 100%;
+        width: 100%;
         column-gap: 5px;
         display: flex;
         flex-direction: column;
