--- a/assets/index.css
+++ b/assets/index.css
@@ -540,8 +540,16 @@ hr{
     }
 }
 @media (max-width: 480px){
+    *{
+        overflow-x: hidden;
+    }
+    html{
+        max-width: 100vw;
+    }
     body{
-        overflow-x:hidden;
+        max-width: 100vw;
+        width: auto;
+        overflow-x:visible;
         white-space:nowrap;
     }
     .header-text{
