--- a/assets/index.css
+++ b/assets/index.css
@@ -545,11 +545,14 @@ hr{
     }
 }
 @media (max-width: 480px){
+    *{
+        max-width: 100vw;
+    }
     html{
         max-width: 100vw;
     }
     body{
-        max-width: 100vw;
+        max-width:100dvw;
         width: auto;
         overflow-x:hidden;
         white-space:nowrap;
@@ -598,6 +601,7 @@ hr{
     }
     .right-side img{
         margin-left: -20%;
+        
     }
     .right-side{
         margin-left: 0;
@@ -605,6 +609,7 @@ hr{
     }
     .left-side{
         justify-content: center;
+        overflow-x: visible;
     }
     .left-1 p{
         font-size: 20px;
