--- a/assets/index.css
+++ b/assets/index.css
@@ -602,6 +602,7 @@ hr{
     .right-side{
         margin-left: 0;
         margin-top: -100px;
+        max-width: 100vw;
     }
     .left-side{
         justify-content: center;
