--- a/assets/index.css
+++ b/assets/index.css
@@ -603,6 +603,7 @@ hr{
         margin-left: 0;
         margin-top: -100px;
         max-width: 100vw;
+        overflow-x: hidden;
     }
     .left-side{
         justify-content: center;
