--- a/assets/index.css
+++ b/assets/index.css
@@ -594,16 +594,15 @@ hr{
     }
     .right-side img, .circle1{
         transform: scale(0.6);
-        margin-left: -15%;
-    }
-    .right-side img{
-        margin-left: -20%;
+      
+        overflow-x: hidden;
     }
     .right-side{
         margin-left: 0;
         margin-top: -100px;
         max-width: 100vw;
-        overflow-x: hidden;
+        display: flex;
+        justify-content: center;
     }
     .left-side{
         justify-content: center;
