--- a/assets/index.css
+++ b/assets/index.css
@@ -592,17 +592,22 @@ hr{
         width: 100%;
         max-width: 100%;
     }
-    .right-side img, .circle1{
-        transform: scale(0.6);
-      
+    .right-side img{
         overflow-x: hidden;
+        position: static;
+        height: 270px;
+        width: 300px;
+    }
+    .circle1{
+        display: none;
     }
     .right-side{
         margin-left: 0;
-        margin-top: -100px;
-        max-width: 100vw;
+        margin-top: 0px;
+        max-width: 100vw !important;
         display: flex;
         justify-content: center;
+
     }
     .left-side{
         justify-content: center;
@@ -628,7 +633,7 @@ hr{
     }
     .black-bar{
         position: absolute;
-        margin-top: 350px;
+        margin-top: -10px;
         height: 80px;
     }
     .black-bar h1{
