--- a/assets/index.css
+++ b/assets/index.css
@@ -545,6 +545,9 @@ hr{
     }
 }
 @media (max-width: 480px){
+    *{
+        overflow-x: hidden;
+    }
     html{
         max-width: 100vw;
     }
@@ -592,22 +595,20 @@ hr{
         width: 100%;
         max-width: 100%;
     }
-    .right-side img{
+    .right-side img, .circle1{
+        transform: scale(0.6);
+        margin-left: -15%;
         overflow-x: hidden;
-        position: static;
-        height: 270px;
-        width: 300px;
     }
-    .circle1{
-        display: none;
+    .right-side img{
+        margin-left: -20%;
     }
     .right-side{
         margin-left: 0;
-        margin-top: 0px;
-        max-width: 100vw !important;
+        margin-top: -100px;
+        max-width: 100vw;
         display: flex;
         justify-content: center;
-
     }
     .left-side{
         justify-content: center;
@@ -633,7 +634,7 @@ hr{
     }
     .black-bar{
         position: absolute;
-        margin-top: -10px;
+        margin-top: 350px;
         height: 80px;
     }
     .black-bar h1{
