--- a/assets/index.css
+++ b/assets/index.css
@@ -330,6 +330,7 @@ p, h1, h2{
 }
 .prj2{
     margin-left: 35%;
+    border: none;
 }
 .prj2hidden{
     display: flex;
@@ -548,11 +549,8 @@ hr{
     *{
         box-sizing: border-box;
     }
-    html{
-        max-width: 100vw;
-    }
     body{
-        max-width:100%;
+        max-width:100vw;
         width: auto;
         overflow-x:hidden;
         white-space:nowrap;
