--- a/assets/index.css
+++ b/assets/index.css
@@ -548,6 +548,8 @@ hr{
 @media (max-width: 480px){
     *{
         box-sizing: border-box;
+        padding: 0;
+        margin: 0;
     }
 
     body{
