--- a/assets/index.css
+++ b/assets/index.css
@@ -547,9 +547,7 @@ hr{
 }
 @media (max-width: 480px){
     *{
-        box-sizing: border-box;
-        padding: 0;
-        margin: 0;
+        overflow-x: hidden;
     }
 
     body{
@@ -565,6 +563,9 @@ hr{
         justify-content: space-evenly;
         width: 70%;
         left: 17%;
+    }
+    .landing{
+        overflow-x: visible;
     }
     .left-side{
         width: 100%;
@@ -594,6 +595,7 @@ hr{
         margin-left: 0;
         display: flex;
         margin-top: 100px;
+        overflow-x:visible;
         width: 100%;
         max-width: 100%;
     }
@@ -676,6 +678,7 @@ hr{
         flex-direction: column;
         margin-top: 0;
         align-items: center;
+        overflow-x: visible;
     }
     .prj1, .prj2, .prj3{
         transform: scale(0.8) !important;
